--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         }    </style>
 </head>
 <body>
-    <h1 class="hidden first">Dashain (26th to 8th October)</h1>
+    <h1 class="hidden first">Dashain (26th September to 5th October)</h1>
     <h1 class="hidden second">I Hope You Had A Great Dashain!</h1>
     <section class="hidden third">
         <p>Dashain (also pronounced as Dashain) is the longest Hindu festival in Nepal, traditionally celebrated for two weeks with prayers and offerings to Durga, the Universal Mother Goddess. The great harvest festival of Nepal, Dashain is a time for family reunions, exchange of gifts and blessings, and elaborate pujas. Dashain honors the Goddess Durga, who was created out of the shakti or energy of all the gods, armed with weapons from each of them.</p>
